--- a/package.json
+++ b/package.json
@@ -24,12 +24,13 @@
   "dependencies": {
     "@reach/router": "^1.2.1",
     "babel-cli": "^6.26.0",
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-react": "^6.24.1",
     "express": "^4.16.4",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
-    "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-react": "^6.24.1"
+    "styled-components": "^4.1.1"
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
