--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Flash Note",
   "main": "index.js",
   "scripts": {
-    "test": "jasmine",
+    "test": "",
     "format": "prettier --write \"src/**/*.{js,jsx}\"",
     "lint": "eslint **/*.{js,jsx} --quiet",
     "dev": "parcel src/index.html",
@@ -40,8 +40,6 @@
     "eslint-plugin-import": "^2.13.0",
     "eslint-plugin-jsx-a11y": "^6.1.1",
     "eslint-plugin-react": "^7.10.0",
-    "karma-chrome-launcher": "^2.2.0",
-    "karma-jasmine": "^2.0.1",
     "parcel-bundler": "^1.10.3",
     "prettier": "^1.15.2"
   }
